--- a/.github/workflows/build_docker_production.yaml
+++ b/.github/workflows/build_docker_production.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   build-deploy:
     name: Build and Publish (on production)
+    runs-on: ubuntu-latest
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
